<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/shop"
            android:icon="@drawable/ic_shop_two"
            android:title="@string/action_shop" />
        <item
            android:id="@+id/shops"
            android:icon="@drawable/ic_store"
            android:title="@string/action_shops" />
    </group>
    <item android:title="@string/action_label_other">
        <menu>
            <item
                android:id="@+id/sign_in"
                android:icon="@drawable/ic_person"
                android:title="@string/action_login" />
            <item
                android:id="@+id/sign_out"
                android:visible="false"
                android:icon="@drawable/ic_person_outline"
                android:title="@string/action_logout" />
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_mail_outline"
                android:title="@string/action_feedback" />
        </menu>
    </item>

</menu>
