<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sanyi.shop.com.shop.ListCart">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ListView
            android:id="@+id/cartListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="left"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" />
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyCartText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startShoppingText"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#ABABAB"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/cartFinalPriceText"/>
        <TextView
            android:text="0 FT"
            android:id="@+id/PriceTagInCart"
            android:layout_width="0dp"
            android:gravity="center"
            android:background="#ABABAB"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
